<resources>
    <string name="app_name">Checklist</string>
    <string name="empty_title_no_checklists">No Checklists Created</string>
    <string name="hint_checklist_title">Checklist Title</string>
    <string name="label_new_checklist">New Checklist</string>
    <string name="warn_enter_title">Enter title for the checklist</string>
    <string name="msg_checklist_not_saved">Problem saving checklist. Please try again</string>
    <string name="msg_checklist_saved">Checklist Saved</string>
    <string name="dialog_title_conf_del">Confirm Deletion</string>
    <string name="dialog_msg_delete_all_checklists">Do you wish to delete all checklists? This action will delete all checklists and its items and cannot be undone</string>
    <string name="option_cancel">Cancel</string>
    <string name="option_delete">Delete</string>
    <string name="msg_error_delete_all_checklists">Problem deleting all checklists. Please try again</string>
    <string name="msg_all_checklists_deleted">All checklists were deleted</string>
    <string name="label_edit_checklist">Edit Checklist</string>
    <string name="action_save">Save</string>
    <string name="dialog_msg_delete_checklist">Do you wish to delete this checklist? This action will delete all the items in the list and cannot be undone</string>
    <string name="msg_checklist_not_deleted">Problem deleting this checklist. Please try again</string>
    <string name="msg_checklist_deleted">Checklist was deleted</string>
    <string name="empty_title_no_items">No Items in the Checklist</string>
    <string name="empty_sub_title_no_items">Start adding items by clicking the button below</string>
    <string name="empty_sub_title_no_checklists">Create new checklist by clicking the button below</string>
    <string name="action_mark_all_checked">Mark all as Checked</string>
    <string name="action_mark_all_unchecked">Mark all as Unchecked</string>
    <string name="action_rename_checklist">Rename Checklist</string>
    <string name="action_delete_all">Delete All</string>
    <string name="hint_checklist_item">Checklist Item</string>
    <string name="msg_items_not_deleted">Problem deleting checklist items. Please try again</string>
    <string name="label_edit_item">Edit Item</string>
    <string name="label_new_item">New Item</string>
    <string name="msg_item_deleted">Item was deleted</string>
    <string name="msg_item_not_deleted">Problem deleting item. Please try again</string>
    <string name="label_unchecked">Unchecked</string>
    <string name="label_checked">Checked</string>
    <string name="msg_item_saved">Item Saved</string>
    <string name="msg_item_not_saved">Problem saving item. Please try again</string>
    <string name="action_delete_checklist">Delete Checklist</string>
    <string name="action_delete_items">Delete Items</string>
    <string name="dialog_msg_delete_items">Do you wish to delete all items in the checklist? This action will delete all items and cannot be undone</string>
    <string name="msg_all_items_deleted">All items were deleted</string>
    <string name="msg_all_items_checked">All items were checked</string>
    <string name="msg_all_items_unchecked">All items were unchecked</string>
    <string name="msg_all_items_not_checked">Problem marking all items as checked. Please try again</string>
    <string name="msg_all_items_not_unchecked">Problem marking all items as unchecked. Please try again</string>
</resources>
