<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_mark_all_checked"
        android:title="@string/action_mark_all_checked"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mark_all_unchecked"
        android:title="@string/action_mark_all_unchecked"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_items"
        android:title="@string/action_delete_items"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rename_checklist"
        android:title="@string/action_rename_checklist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_checklist"
        android:title="@string/action_delete_checklist"
        app:showAsAction="never" />
</menu>